--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Spotlight Lists</title>
 </head>
-
 <body>
-    
+    <section class="lists">
+        <h2>Pet List</h2>
+        <div id="pet-container">
+
+        </div>
+    </section>
 
     <script type="module" src="./app.js"></script>
 </body>
