created render-holiday func

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
         </div>
     </section>
+    <section class="lists">
+        <h2>Holiday List</h2>
+        <div id="holiday-container">
 
+        </div>
+    </section>
     <script type="module" src="./app.js"></script>
 </body>
 
