started render foods

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
         </div>
     </section>
+    <section class="lists">
+        <h2>Food List</h2>
+        <div id="food-container">
+
+        </div>
+    </section>
     <script type="module" src="./app.js"></script>
 </body>
 
